--- a/package.json
+++ b/package.json
@@ -1,62 +1,1 @@
-
-{
-  "name": "nextn",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start -p $PORT",
-    "lint": "next lint",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@genkit-ai/firebase": "1.16.1",
-    "@genkit-ai/googleai": "1.16.1",
-    "@opentelemetry/exporter-jaeger": "*",
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "@tailwindcss/typography": "^0.5.13",
-    "@types/node": "^20",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/recharts": "^1.8.29",
-    "autoprefixer": "^10.4.19",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "dotenv": "^16.4.5",
-    "firebase": "^10.12.2",
-    "firebase-admin": "^12.1.1",
-    "genkit": "1.16.1",
-    "lucide-react": "^0.475.0",
-    "next": "14.2.4",
-    "pdfjs-dist": "^4.4.168",
-    "postcss": "^8.4.38",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.1",
-    "recharts": "^2.12.7",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5",
-    "wav": "^1.0.2",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "genkit-cli": "*"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
-}
+{\n  "name": "nextn",\n  "version": "0.1.0",\n  "private": true,\n  "scripts": {\n    "dev": "next dev",\n    "build": "next build",\n    "start": "next start -p $PORT",\n    "lint": "next lint",\n    "typecheck": "tsc --noEmit"\n  },\n  "dependencies": {\n    "@genkit-ai/firebase": "1.16.1",\n    "@genkit-ai/googleai": "1.16.1",\n    "@opentelemetry/exporter-jaeger": "*",\n    "@radix-ui/react-accordion": "^1.2.0",\n    "@radix-ui/react-avatar": "^1.1.0",\n    "@radix-ui/react-dropdown-menu": "^2.1.1",\n    "@radix-ui/react-label": "^2.1.0",\n    "@radix-ui/react-progress": "^1.1.0",\n    "@radix-ui/react-scroll-area": "^1.1.0",\n    "@radix-ui/react-select": "^2.1.1",\n    "@radix-ui/react-slot": "^1.1.0",\n    "@radix-ui/react-switch": "^1.1.0",\n    "@radix-ui/react-tabs": "^1.1.0",\n    "@radix-ui/react-toast": "^1.2.1",\n    "@radix-ui/react-tooltip": "^1.1.2",\n    "@tailwindcss/typography": "^0.5.13",\n    "@types/node": "^20",\n    "@types/react": "^18.3.3",\n    "@types/react-dom": "^18.3.0",\n    "@types/recharts": "^1.8.29",\n    "autoprefixer": "^10.4.19",\n    "class-variance-authority": "^0.7.0",\n    "clsx": "^2.1.1",\n    "dotenv": "^16.4.5",\n    "firebase": "^12.1.0",\n    "firebase-admin": "^12.1.1",\n    "genkit": "1.16.1",\n    "lucide-react": "^0.475.0",\n    "next": "14.2.4",\n    "pdfjs-dist": "^4.4.168",\n    "postcss": "^8.4.38",\n    "react": "^18.3.1",\n    "react-dom": "^18.3.1",\n    "react-hook-form": "^7.52.1",\n    "recharts": "^2.12.7",\n    "tailwind-merge": "^2.4.0",\n    "tailwindcss": "^3.4.1",\n    "tailwindcss-animate": "^1.0.7",\n    "typescript": "^5",\n    "wav": "^1.0.2",\n    "zod": "^3.23.8"\n  },\n  "devDependencies": {\n    "genkit-cli": "*"\n  },\n  "engines": {\n    "node": ">=18.0.0"\n  }\n}
