--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,14 @@
-
 {
   "name": "CreditWise AI",
   "short_name": "CreditWise",
-  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer by CreditWise AI",
+  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#F0F2F5",
   "theme_color": "#3F51B5",
-  "orientation": "portrait-primary",
+  "scope": "/",
+  "lang": "en-US",
+  "categories": ["finance", "business", "utilities"],
   "icons": [
     {
       "src": "/icon-192x192.png",
@@ -17,6 +18,18 @@
     },
     {
       "src": "/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icon-maskable-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icon-maskable-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
