--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,31 +8,45 @@
   "theme_color": "#3F51B5",
   "scope": "/",
   "lang": "en-US",
-  "categories": ["finance", "business", "utilities"],
+  "categories": [
+    "education"
+  ],
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "https://placehold.co/192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "https://placehold.co/512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/icon-maskable-192x192.png",
+      "src": "https://placehold.co/192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/icon-maskable-512x512.png",
+      "src": "https://placehold.co/512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     }
-  ]
+  ],
+  "orientation": "natural",
+  "display_override": [
+    "browser",
+    "minimal-ui",
+    "standalone",
+    "fullscreen",
+    "window-controls-overlay"
+  ],
+  "prefer_related_applications": true,
+  "edge_side_panel": {
+    "preferred_width": 60
+  }
 }
